# graphprop

./: LICENSE  README.md  graphprop.cabal
src/: Main.hs
