name:                graphprop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/beala/graphprop#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Beal
maintainer:          alexlbeal@gmail.com
copyright:           2017 Alex Beal
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable graphprop
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall  
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , random
